# AIE_Bootcamp_VC

./: .gitignore  ACTIVITIES.md  README.md  hello.py  pyproject.toml
00_Onramp/: README.md
00_Onramp/onramp03_Python_basics/: app_student_activities.py
00_Onramp/onramp03_Python_basics/.ipynb_checkpoints/: llm_python_basics_extended-2-checkpoint.ipynb
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  multi_agent_flowchart.md  pyproject.toml
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml
10_Open_DeepResearch/: open-deep-research.ipynb
14_LangGraph_Platform/app/graphs/: agent_with_helpfulness.py
15_A2A_LangGraph/: README.md  setup.py
15_A2A_LangGraph/consumer/: README.md  __main__.py  a2a_tool.py  agent.py
16_Production_RAG_and_Guardrails/: Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb  pyproject.toml
16_Production_RAG_and_Guardrails/langgraph_agent_lib/: agents.py
(+191 files in other folders)
